--- a/src/CV.html
+++ b/src/CV.html
@@ -82,8 +82,8 @@
     </div>
   </header>
   <main class="main">
-    <div class="container">
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F9F9XkDZnuJeVpFJNKY2DCg%2FErhanErs%C3%B6zCV%3Fnode-id%3D1%253A61" allowfullscreen></iframe>
+    <div class="container full-height">
+      <iframe width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F9F9XkDZnuJeVpFJNKY2DCg%2FErhanErs%C3%B6zCV%3Fnode-id%3D1%253A61" allowfullscreen></iframe>
     </div>
   </main>
   <footer class="footer">
