--- a/src/CV.html
+++ b/src/CV.html
@@ -83,7 +83,7 @@
   </header>
   <main class="main">
     <div class="container full-height">
-      <iframe width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F9F9XkDZnuJeVpFJNKY2DCg%2FErhanErs%C3%B6zCV%3Fnode-id%3D1%253A61" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F9F9XkDZnuJeVpFJNKY2DCg%2FErhanErs%C3%B6zCV%3Fpage-id%3D0%253A1%26node-id%3D1%253A61%26viewport%3D283%252C48%252C0.82%26scaling%3Dmin-zoom" allowfullscreen></iframe>
     </div>
   </main>
   <footer class="footer">
